# niblet

./: package-lock.json  package.json
.github/workflows/: release.yml
scripts/: release.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard_history.rs  lib.rs  updater.rs  window.rs
src/components/: ClipboardPanel.tsx  EditorWindow.tsx  HistoryPanel.tsx  SettingsPanel.tsx  SnippetsPanel.tsx  index.ts
src/hooks/: index.ts  useHotkey.ts
src/stores/: editorStore.ts
src/types/: index.ts
