[package]
name = "niblet"
version = "1.1.0"
description = "Niblet - Cross-Platform Text Composition Tool"
authors = ["Niblet Contributors"]
license = "MIT"
repository = "https://github.com/charliesteenhagen-wk/niblet"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "niblet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
# HTTP client for update checks
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
# Note: Using path dependencies for tauri-nspanel and monitor
# If these don't exist locally, clone them:
#   git clone --branch v2.1 https://github.com/ahkohd/tauri-nspanel.git /tmp/tauri-nspanel
#   git clone --branch v2 https://github.com/ahkohd/tauri-toolkit.git /tmp/tauri-toolkit
tauri-nspanel = { path = "/tmp/tauri-nspanel" }
monitor = { path = "/tmp/tauri-toolkit/libs/monitor" }
